# FastLanesGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yaml
crystal/: CMakeLists.txt
crystal-opt/: README.md
crystal-opt/src/: CMakeLists.txt
crystal-opt/src/crystal/: crystal.cuh  join.cuh  load.cuh  pred.cuh  reduce.cuh
crystal-opt/src/ops/: join.cu  project.cu
crystal-opt/src/ops/utils/: generator.h
crystal-opt/src/ssb/: all.cu  gpu_utils.h  q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu  ssb_utils.h
crystal/src/: CMakeLists.txt
crystal/src/ops/: join.cu  project.cu
crystal/src/ssb/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu  ssb_utils.h
data/: README.md  util.py
data/result_of_queries/: q11  q21  q31  q41
data/ssb/dbgen/: .gitignore  qgen
data/ssb/loader/: sort.py  sort_other_way.py
fastlanes/: CMakeLists.txt  generate.py  generated_files.txt
fastlanes/example/: CMakeLists.txt  fastlanes_bench_bitpack.cu  fastlanes_bench_delta.cu
fastlanes/src/: CMakeLists.txt  bitpack_register.cu  bitpack_shared_memory.cu  delta_global_memory.cu  delta_shared_memory.cu  fastlanes_gpu.cpp  pack.cpp  test_g.cu
fastlanes/src/include/: common.cuh  crystal_ssb_utils.h  debug.cuh  debug.hpp  error.cuh  fastlanes.cuh  gpu_utils.h  ssb_utils.h  util.cuh
fastlanes/src/include/crystal/: crystal.cuh  join.cuh  load.cuh  pred.cuh  reduce.cuh  store.cuh  term.cuh
fastlanes/src/include/crystal-opt/: join.cuh  load.cuh  pred.cuh  store.cuh
fastlanes/src/include/fastlanes/: join.cuh
fastlanes/src/include/fls_gen/: macros.hpp
fastlanes/src/include/fls_gen/pack/: pack.hpp
fastlanes/src/include/fls_gen/rle/: rle.hpp
fastlanes/src/include/fls_gen/rsum/: rsum.cuh
fastlanes/src/include/fls_gen/transpose/: transpose.hpp
fastlanes/src/include/fls_gen/unpack/: hardcoded_16.cuh  unpack.cuh  unpack.hpp  unpack_fused.cuh
fastlanes/src/include/query/: query_2.hpp  query_21.hpp  query_3.hpp  query_31.hpp  query_4.hpp  query_41.hpp
fastlanes/src/ssb/: READMe.md  compress_ssb.cu  compress_ssb_sorted.cu  fls_q11.cu  fls_q11_bitpacked_opt_v2.cu  fls_q11_bitpacked_opt_v3.cu  fls_q11_bitpacked_opt_v4.cu  fls_q11_bp_crystal_opt.cu  fls_q21.cu  fls_q21_bitpacked_opt_v4.cu  fls_q31.cu  fls_q31_bitpacked_opt_v5.cu  fls_q41.cu  fls_q41_bitpacked_opt_v3.cu  fls_q41_bitpacked_opt_v4.cu
fastlanes/src/tmp/: fls_q41_bitpacked_opt_v2.cu
results/T4/crystal/: crystal_q21.txt  crystal_q31_sf10.txt  crystal_q41_sf10.txt
results/T4/crystal-fls/: crystal_fls_q11_sf10.txt  crystal_fls_q21.txt  crystal_fls_q21_sf10.txt  crystal_fls_q31_sf10.txt  crystal_fls_q41_sf10.txt
results/T4/crystal-opt/: crystal_opt_q21.txt  crystal_opt_q21_sf10.txt  crystal_opt_q31_sf10.txt  crystal_opt_q41_sf10.txt
results/V100/crystal/: crystal_q21_sf10.txt  crystal_q31_sf10.txt  crystal_q41_sf10_v100.txt
results/V100/crystal-fls/: crystal_fls_q21_sf10_2.txt  crystal_fls_q31_sf10.txt  crystal_fls_q41_sf10.txt
results/V100/crystal-opt/: crystal_opt_q11_sf10.txt  crystal_opt_q21_sf10.txt  crystal_opt_q31_sf10.txt  crystal_opt_q41_sf10_v100.txt
results/V100/crystal-opt-fls/: crystal_opt_fls_q11_sf10.txt
scripts/: ssb_on_duckdb.py
scripts/ssb_on_duckdb/: __init__.py  load.py  query_11.py  query_12.py  query_13.py  query_21.py
tile_based/: README.md
tile_based/src/: CMakeLists.txt  config.hpp  rlebinpack.cpp  test_match_rle.cu  test_perf_rle.cu  tile_based.cu  tile_based_bench_bitpack.cu  tile_based_bench_bp_sum.cu  tile_based_bench_delta.cu  tile_based_bench_delta_sum.cu  tile_based_bench_rle.cu  tile_based_bench_rle_all_memory.cu  tile_based_binpack_query_11.cu  tile_based_bitpack_shared_memory.cu
tile_based/src/include/: binpack_kernel.cuh  deltabinpack_kernel.cuh  econfig.h  kernel.cuh  rlebinpack_kernel.cuh  ssb_gpu_utils.h  ssb_utils.h
tile_based/src/include/utils/: gpu_utils.h
tool/: CMakeLists.txt  device_query.cu
