# Generated Code : -----------------------------------------------------------------------------------------------------
add_subdirectory(generated)

# Source : -------------------------------------------------------------------------------------------------------------
add_subdirectory(src)

# Example: -------------------------------------------------------------------------------------------------------------
add_subdirectory(example)
